--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,7 +3,7 @@ name: Add to Exchange and Deploy to Sandbox
 on:
   push:
     tags:
-      - "*"
+      - 'production_blue_[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]_[0-9][0-9]'
 
 env:
   APPID: ${{ secrets.mule_connected_app_sand_id }}
