--- a/contract-api/pom.xml
+++ b/contract-api/pom.xml
@@ -13,9 +13,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<app.runtime>4.9.0</app.runtime>
+		<app.runtime>4.9.6</app.runtime>
 		<mule.maven.plugin.version>4.3.0</mule.maven.plugin.version>
 		<mule.app.ver>1.0.2</mule.app.ver>
+		<munit.version>3.4.0</munit.version>
 	</properties>
 
 	<build>
@@ -57,6 +58,36 @@
 					<classifier>---- select project type ----</classifier>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.mulesoft.munit.tools</groupId>
+				<artifactId>munit-maven-plugin</artifactId>
+				<version>${munit.version}</version>
+				<executions>
+					<execution>
+						<id>test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+							<goal>coverage-report</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+			        <coverage>
+			            <runCoverage>true</runCoverage>
+			            <failBuild>true</failBuild>
+			
+			            <requiredApplicationCoverage>100</requiredApplicationCoverage>
+			            <requiredResourceCoverage>100</requiredResourceCoverage>
+			            <requiredFlowCoverage>100</requiredFlowCoverage>
+			
+			            <formats>
+			                <format>console</format>
+			                <format>html</format>
+			            </formats>
+			        </coverage>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -78,6 +109,26 @@
 			<artifactId>mule-secure-configuration-property-module</artifactId>
 			<version>1.2.7</version>
 			<classifier>mule-plugin</classifier>
+		</dependency>
+		<dependency>
+			<groupId>com.mulesoft.munit</groupId>
+			<artifactId>munit-runner</artifactId>
+			<version>3.4.0</version>
+			<classifier>mule-plugin</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.mulesoft.munit</groupId>
+			<artifactId>munit-tools</artifactId>
+			<version>3.4.0</version>
+			<classifier>mule-plugin</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.weave</groupId>
+			<artifactId>assertions</artifactId>
+			<version>1.2.1</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
