--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -12,7 +12,30 @@ env:
   ENVSECRET: ${{ secrets.sandbox_client_secret }}
 
 jobs:
-  exchangedep:
+  munit-test:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout this repo
+      uses: actions/checkout@v3
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - name: maven-settings-xml-action
+      uses: whelk-io/maven-settings-xml-action@v20
+      with:
+        repositories: '[{ "id": "anypoint-exchange-v3", "url": "https://maven.anypoint.mulesoft.com/api/v3/maven" }]'
+        servers: '[{ "id": "anypoint-exchange-v3", "username": "~~~Client~~~", "password": "${env.APPID}~?~${env.APPSECRET}" }]'
+    - name: Run MUnit tests
+      working-directory: ./contract-api
+      run: |
+        mvn clean test -e
+
+  build-to-exchange:
+    needs: munit-test
     runs-on: ubuntu-latest
     steps:
     - name: Checkout this repo
@@ -36,7 +59,7 @@ jobs:
         mvn clean deploy -e
 
   deploy:
-    needs: exchangedep
+    needs: build-to-exchange
     runs-on: ubuntu-latest
     steps:
     - name: Checkout this repo
