--- a/contract-api/pom.xml
+++ b/contract-api/pom.xml
@@ -73,6 +73,7 @@
 					</execution>
 				</executions>
 				<configuration>
+					<runtimeProduct>MULE</runtimeProduct>
 					<coverage>
 						<runCoverage>true</runCoverage>
 						<formats>
