--- a/contract-api/pom.xml
+++ b/contract-api/pom.xml
@@ -74,6 +74,8 @@
 				</executions>
 				<configuration>
 					<runtimeProduct>MULE</runtimeProduct>
+					<failBuild>false</failBuild>
+					<runCoverage>false</runCoverage>
 				</configuration>
 			</plugin>
 		</plugins>
