--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -30,9 +30,9 @@ jobs:
         repositories: '[{ "id": "anypoint-exchange-v3", "url": "https://maven.anypoint.mulesoft.com/api/v3/maven" }]'
         servers: '[{ "id": "anypoint-exchange-v3", "username": "~~~Client~~~", "password": "${env.APPID}~?~${env.APPSECRET}" }]'
     - name: Run MUnit tests
-      working-directory: ./contract-api
+      working-directory: ./contract-api/contract-api
       run: |
-        mvn clean test -Dmunit.test=contract-api-test-suite -e
+        mvn clean test -e
 
   build-to-exchange:
     needs: munit-test
