--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -52,6 +52,7 @@ jobs:
       with:
         repositories: '[{ "id": "anypoint-exchange-v3", "url": "https://maven.anypoint.mulesoft.com/api/v3/maven" }]'
         servers: '[{ "id": "anypoint-exchange-v3", "username": "~~~Client~~~", "password": "${env.APPID}~?~${env.APPSECRET}" }]'
+        profiles: '[{ "id": "Mule", "activation": { "activeByDefault": true }, "repositories": [{ "id": "MuleRepository", "name": "MuleRepository", "url": "https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/", "layout": "default", "releases": { "enabled": true }, "snapshots": { "enabled": true } }] }]'
     - name: Deploy to Exchange
       working-directory: ./contract-api
       run: |
