--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -30,6 +30,8 @@ jobs:
         repositories: '[{ "id": "anypoint-exchange-v3", "url": "https://maven.anypoint.mulesoft.com/api/v3/maven" }]'
         profiles: '[{ "id": "Mule", "activation": { "activeByDefault": true }, "repositories": [{ "id": "MuleRepository", "name": "MuleRepository", "url": "https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/", "layout": "default", "releases": { "enabled": true }, "snapshots": { "enabled": true } }] }]'
         servers: '[{ "id": "anypoint-exchange-v3", "username": "~~~Client~~~", "password": "${env.APPID}~?~${env.APPSECRET}" }]'
+    - name: Debug settings.xml
+      run: cat ~/.m2/settings.xml
     - name: Run MUnit tests
       working-directory: ./contract-api/
       run: |
