--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -27,7 +27,7 @@ jobs:
     - name: maven-settings-xml-action
       uses: whelk-io/maven-settings-xml-action@v20
       with:
-        profiles: '[{ "id": "Mule", "activation": { "activeByDefault": true }, "repositories": [{ "id": "MuleRepository", "name": "MuleRepository", "url": "", "layout": "default", "releases": { "enabled": true }, "snapshots": { "enabled": true } }] }]'
+        profiles: '[{ "id": "Mule", "activation": { "activeByDefault": true }, "repositories": [{ "id": "MuleRepository", "name": "MuleRepository", "url": "", "layout": "default"}] }]'
         servers: '[{ "id": "anypoint-exchange-v3", "username": "~~~Client~~~", "password": "${env.APPID}~?~${env.APPSECRET}" }]'
     - name: Run MUnit tests
       working-directory: ./contract-api/
