--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -27,8 +27,30 @@ jobs:
     - name: maven-settings-xml-action
       uses: whelk-io/maven-settings-xml-action@v22
       with:
-        profiles: '[{ "id": "Mule", "activation": { "activeByDefault": true }, "repositories": [{ "id": "MuleRepository", "name": "MuleRepository", "url": "https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/", "layout": "default", "releases": { "enabled": true }, "snapshots": { "enabled": true } }] }]'
         servers: '[{ "id": "anypoint-exchange-v3", "username": "~~~Client~~~", "password": "${env.APPID}~?~${env.APPSECRET}" }]'
+        profiles: |
+          [
+            {
+              "id": "Mule",
+              "activation": {
+                "activeByDefault": true
+              },
+              "repositories": [
+                {
+                  "id": "MuleRepository",
+                  "name": "MuleRepository",
+                  "url": "https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/",
+                  "layout": "default",
+                  "releases": {
+                    "enabled": true
+                  },
+                  "snapshots": {
+                    "enabled": true
+                  }
+                }
+              ]
+            }
+          ]
     - name: Run MUnit tests
       working-directory: ./contract-api/
       run: |
