--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,39 +25,23 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
     - name: maven-settings-xml-action
-      uses: s4u/maven-settings-action@v3.1.0
+      uses: whelk-io/maven-settings-xml-action@v22
       with:
-        servers: |
-          [
-            {
-              "id": "anypoint-exchange-v3",
-              "username": "~~~Client~~~",
-              "password": "${env.APPID}~?~${env.APPSECRET}"
-            }
-          ]
-        profiles: |
-          [
-            {
-              "id": "Mule",
-              "activation": {
-                "activeByDefault": true
-              },
-              "repositories": [
-                {
-                  "id": "MuleRepository",
-                  "name": "MuleRepository",
-                  "url": "https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/",
-                  "layout": "default",
-                  "releases": {
-                    "enabled": true
-                  },
-                  "snapshots": {
-                    "enabled": true
+        servers: '[{ "id": "anypoint-exchange-v3", "username": "~~~Client~~~", "password": "${env.APPID}~?~${env.APPSECRET}" }]'
+        repositories: |
+                [
+                  {
+                    "id": "MuleRepository",
+                    "name": "MuleRepository",
+                    "url": "https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/",
+                    "releases": {
+                      "enabled": "true"
+                    },
+                    "snapshots": {
+                      "enabled": "true"
+                    }
                   }
-                }
-              ]
-            }
-          ]
+                ]
     - name: Run MUnit tests
       working-directory: ./contract-api/
       run: |
