--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,23 +25,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
     - name: maven-settings-xml-action
-      uses: whelk-io/maven-settings-xml-action@v22
+      uses: whelk-io/maven-settings-xml-action@v20
       with:
+        repositories: '[{ "id": "MuleRepository", "url": "https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/" }]'
         servers: '[{ "id": "anypoint-exchange-v3", "username": "~~~Client~~~", "password": "${env.APPID}~?~${env.APPSECRET}" }]'
-        repositories: |
-                [
-                  {
-                    "id": "MuleRepository",
-                    "name": "MuleRepository",
-                    "url": "https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/",
-                    "releases": {
-                      "enabled": "true"
-                    },
-                    "snapshots": {
-                      "enabled": "true"
-                    }
-                  }
-                ]
     - name: Run MUnit tests
       working-directory: ./contract-api/
       run: |
