--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -17,13 +17,6 @@ jobs:
     steps:
     - name: Checkout this repo
       uses: actions/checkout@v3
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
     - name: maven-settings-xml-action
       uses: whelk-io/maven-settings-xml-action@v20
       with:
@@ -44,7 +37,7 @@ jobs:
     - name: Deploy to Sandbox
       working-directory: ./contract-api
       run: |
-        mvn clean deploy -e -X -DmuleDeploy \
+        mvn clean deploy -e -DmuleDeploy \
          -Dapp.name="contract-api" \
          -Denvironment="Sandbox" \
          -Dtarget.env="dev" \
