--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,6 +15,15 @@ jobs:
   build-to-exchange:
     runs-on: ubuntu-22.04
     steps:
+    - name: Setup Maven
+      uses: s4u/setup-maven-action@v1.18.0
+      with:
+        maven-version: 3.9.6
+    - name: Setup Java
+      uses: actions/setup-java@v4.7.1
+      with:
+        distribution: 'temurin'
+        java-version: '17.0.12'
     - name: Checkout this repo
       uses: actions/checkout@v4.2.2
     - name: Show Ubuntu version
@@ -38,6 +47,12 @@ jobs:
     needs: build-to-exchange
     runs-on: ubuntu-latest
     steps:
+    - name: Show Ubuntu version
+      run: cat /etc/os-release
+    - name: Show Java version
+      run: java -version
+    - name: Show Maven version
+      run: mvn -version
     - name: Checkout this repo
       uses: actions/checkout@v4.2.2
     - name: Deploy to Sandbox
