--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -22,8 +22,12 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '17.0.12'
-    - name: Add JAVA_HOME/bin to PATH
-      run: echo "$JAVA_HOME/bin" >> $GITHUB_PATH
+    - name: Debug Java path
+      run: |
+        echo "JAVA_HOME=$JAVA_HOME"
+        echo "PATH=$PATH"
+        which java
+        java -version
     - name: Setup Maven
       uses: s4u/setup-maven-action@v1.18.0
       with:
