--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -22,6 +22,11 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '17.0.12'
+    - name: Setup Maven
+      run: |
+        MAVEN_VERSION=3.9.6
+        curl -fsSL https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz | tar -xz -C /opt
+        echo "/opt/apache-maven-${MAVEN_VERSION}/bin" >> $GITHUB_PATH
     - name: Show Ubuntu version
       run: cat /etc/os-release
     - name: Show Java version
