--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -17,6 +17,16 @@ jobs:
     steps:
     - name: Checkout this repo
       uses: actions/checkout@v4.2.2
+    - name: Setup Java
+      uses: actions/setup-java@v4.7.1
+      with:
+        distribution: 'temurin'
+        java-version: '17.0.12'
+    - name: Setup Maven
+      run: |
+        MAVEN_VERSION=3.9.6
+        curl -fsSL https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz | tar -xz -C /opt
+        echo "/opt/apache-maven-${MAVEN_VERSION}/bin" >> $GITHUB_PATH
     - name: Show Ubuntu version (Debug only. will be removed later.)
       run: cat /etc/os-release
     - name: Show Java version (Debug only. will be removed later.)
