--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,10 +25,7 @@ jobs:
     - name: Setup Maven
       run: |
         MAVEN_VERSION=3.9.6
-        for i in {1..3}; do
-          curl -fsSL https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
-            | tar -xz -C /opt && break || sleep 10
-        done
+        curl --retry 5 --retry-delay 10 -fsSL https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz tar -xz -C /opt
         echo "/opt/apache-maven-${MAVEN_VERSION}/bin" >> $GITHUB_PATH
     - name: Show Ubuntu version (Debug only. will be removed later.)
       run: cat /etc/os-release
@@ -60,10 +57,7 @@ jobs:
     - name: Setup Maven
       run: |
         MAVEN_VERSION=3.9.6
-        for i in {1..3}; do
-          curl -fsSL https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
-            | tar -xz -C /opt && break || sleep 10
-        done
+        curl --retry 5 --retry-delay 10 -fsSL https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz tar -xz -C /opt
         echo "/opt/apache-maven-${MAVEN_VERSION}/bin" >> $GITHUB_PATH
     - name: Show Ubuntu version (Debug only. will be removed later.)
       run: cat /etc/os-release
