--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -26,9 +26,9 @@ jobs:
         echo "Current tag: $TAG_NAME"
         COMMIT_SHA=$(git rev-list -n 1 "$TAG_NAME")
         if git merge-base --is-ancestor "$COMMIT_SHA" origin/master; then
-          echo "Tag is from master"
+          echo "commit is from master"
         else
-          echo "Tag is not from master. Exiting."
+          echo "commit is not from master. Exiting."
           exit 1
         fi
     - name: Setup Java
