--- a/contract-api/pom.xml
+++ b/contract-api/pom.xml
@@ -4,17 +4,17 @@
 
 	<groupId>3fe32aba-c302-46fc-9f15-b5c1433a251f</groupId>
 	<artifactId>contract-api</artifactId>
-	<version>${mule.app.ver}</version>
+	<version>1.0.0</version>
 	<packaging>mule-application</packaging>
-	
+
 	<name>contract-api</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<app.runtime>4.9.6</app.runtime>
-		<mule.maven.plugin.version>4.3.0</mule.maven.plugin.version>
+		<app.runtime>4.9.7</app.runtime>
+		<mule.maven.plugin.version>4.5.1</mule.maven.plugin.version>
 		<munit.version>3.4.0</munit.version>
 		<mule.app.ver>1.0.0-SNAPSHOT</mule.app.ver>
 	</properties>
@@ -47,9 +47,9 @@
 						<vCores>0.1</vCores>
 						<deploymentSettings>
 							<http>
-							<inbound>
-								<publicUrl></publicUrl>
-							</inbound>
+								<inbound>
+									<publicUrl>http://www1.test.com/contract-api,http://www2.test.com/contract-api,http://www3.test.com/contract-api,http://www4.test.com/contract-api</publicUrl>
+								</inbound>
 							</http>
 						</deploymentSettings>
 						<properties>
@@ -77,17 +77,17 @@
 					</execution>
 				</executions>
 				<configuration>
-                      <coverage>
-                          <runCoverage>true</runCoverage>
-                          <failBuild>false</failBuild>
-                          <requiredApplicationCoverage>100</requiredApplicationCoverage>
-                          <requiredResourceCoverage>100</requiredResourceCoverage>
-                          <requiredFlowCoverage>100</requiredFlowCoverage>
-                          <formats>
-                              <format>console</format>
-                              <format>html</format>
-                          </formats>
-                      </coverage>
+					<coverage>
+						<runCoverage>true</runCoverage>
+						<failBuild>false</failBuild>
+						<requiredApplicationCoverage>100</requiredApplicationCoverage>
+						<requiredResourceCoverage>100</requiredResourceCoverage>
+						<requiredFlowCoverage>100</requiredFlowCoverage>
+						<formats>
+							<format>console</format>
+							<format>html</format>
+						</formats>
+					</coverage>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -104,6 +104,19 @@
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-sockets-connector</artifactId>
 			<version>1.2.5</version>
+			<classifier>mule-plugin</classifier>
+		</dependency>
+		<dependency>
+			<groupId>3fe32aba-c302-46fc-9f15-b5c1433a251f</groupId>
+			<artifactId>raml-01</artifactId>
+			<version>1.0.1</version>
+			<classifier>raml</classifier>
+			<type>zip</type>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-apikit-module</artifactId>
+			<version>1.11.6</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
