--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -110,6 +110,10 @@ jobs:
       run: java -version
     - name: Show Maven version (Debug only. will be removed later.)
       run: mvn -version
+    - name: maven-settings-xml-action
+      uses: whelk-io/maven-settings-xml-action@v22
+      with:
+        servers: '[{ "id": "anypoint-exchange-v3", "username": "~~~Client~~~", "password": "${env.CONNECTED_APPID}~?~${env.CONNECTED_APPSECRET}" }]'
     - name: Deploy to Sandbox
       working-directory: ./contract-api
       run: |
