--- a/contract-api/pom.xml
+++ b/contract-api/pom.xml
@@ -57,6 +57,7 @@
 							<muleAppVer>${mule.app.ver}</muleAppVer>
 							<anypoint.platform.client_id>${env.client.id}</anypoint.platform.client_id>
 							<anypoint.platform.client_secret>${env.client.secret}</anypoint.platform.client_secret>
+							<mule.key>${mule.key}</mule.key>
 						</properties>
 					</cloudhub2Deployment>
 					<classifier>---- select project type ----</classifier>
